# tp-3-michal_wiktor

./: .gitmodules
Proj3/: CMakeLists.txt  README.md  test.py
Proj3/include/: p3funct.hpp  test.py
Proj3/pyth/: pythonlib.cpp
Proj3/src/: CMakeLists.txt  proj3.cpp
raport/: oddanie_projektu.ipynb
